# cubix_data_engineer_capstone

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/cubix_data_engineer_capstone/: test.py
src/cubix_data_engineer_capstone/etl/bronze/: extract_and_load.py
src/cubix_data_engineer_capstone/etl/silver/: calendar.py
src/cubix_data_engineer_capstone/utils/: databricks.py
tests/: conftest.py
tests/etl/silver/: test_calendar.py
