[project]
name = "cubix-data-engineer-capstone"
version = "0.2.0"
description = ""
authors = [
    {name = "TothImre94",email = "t.imre1994@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [

    "numpy (>=1,<2)"
]

[tool.poetry]
packages = [{include = "cubix_data_engineer_capstone", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pyarrow (>=24.0.0,<25.0.0)",
    "pre-commit (>=4.6.0,<5.0.0)"
]
